--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: git-gateway
-  branch: master # Branch to update (optional; defaults to master)
+  branch: master
 
 media_folder: "src/images"
 public_folder: "/images"
